Ultimo cambio de BD Key

--- a/API_Roda_Llantas/appsettings.json
+++ b/API_Roda_Llantas/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SQL5111.site4now.net;Database=db_aa0004_dbroda;User Id=db_aa0004_dbroda_admin;Password=ZxcvbnM123;"
+    "DefaultConnection": "Server=SQL5112.site4now.net;Database=db_aa2c70_rodallantas;User Id=db_aa2c70_rodallantas_admin;Password=admin123;"
   },
   "JWT": {
     "secret": "b14ca5898a4e4133bbce2ea2315a1916"
